# graphrag-mcp

./: .gitignore  README.md  how-it-works.md  pyproject.toml
docs/superpowers/specs/: 2026-03-31-graphrag-mcp-design.md
skills/: SKILL.md
skills/graph-mem/: SKILL.md  best-practices.md  conventions.md  workflows.md
skills/graph-mem/domains/: code.md  general.md  research.md
skills/graphrag-mcp/: SKILL.md  best-practices.md  conventions.md  workflows.md
skills/graphrag-mcp/domains/: code.md  general.md  research.md
src/graph_mem/: __init__.py  __main__.py  server.py
src/graph_mem/cli/: __init__.py  install.py  main.py
src/graph_mem/db/: __init__.py  connection.py  schema.py
src/graph_mem/graph/: __init__.py  engine.py  merge.py  traversal.py
src/graph_mem/models/: __init__.py  entity.py  observation.py  relationship.py  utils.py
src/graph_mem/semantic/: __init__.py  embeddings.py  search.py
src/graph_mem/storage/: __init__.py  base.py  sqlite_backend.py
src/graph_mem/tools/: __init__.py  _core.py  dashboard.py  entities.py  graph_mgmt.py  maintenance.py  search.py
src/graph_mem/ui/: __init__.py  _keys.py  routes.py  server.py
src/graph_mem/utils/: __init__.py  config.py  errors.py  ids.py  logging.py
src/graphrag_mcp/: server.py
src/graphrag_mcp/cli/: install.py  main.py
src/graphrag_mcp/db/: connection.py
src/graphrag_mcp/graph/: engine.py  merge.py  traversal.py
src/graphrag_mcp/semantic/: embeddings.py  search.py
src/graphrag_mcp/ui/: routes.py  (+2 more)
tests/: conftest.py
tests/test_cli/: test_import_export.py  test_install.py  test_main.py  test_project_dir.py
tests/test_db/: test_config.py  test_config_env.py  test_connection.py  test_migrations.py
tests/test_graph/: test_engine.py  test_merge.py  test_traversal.py
tests/test_models/: test_entity.py  test_observation.py  test_relationship.py
tests/test_semantic/: test_embeddings.py  test_search.py  test_search_optimizations.py  test_vector_search.py
tests/test_server/: test_error_paths.py  test_maintenance.py  test_multigraph.py  test_tools.py
tests/test_storage/: test_edge_cases.py  test_storage.py
tests/test_ui/: test_routes.py  test_server.py
tests/test_utils/: test_config_search.py  test_ids.py  test_logging.py
ui-frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
ui-frontend/src/: App.tsx  main.tsx
(+38 files in other folders)
