[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-mem"
version = "0.1.0"
description = "Production-grade Graph-RAG MCP server with local embeddings — persistent knowledge graphs for any LLM-powered CLI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "graph-mem contributors" },
]
keywords = ["mcp", "graph-mem", "knowledge-graph", "embeddings", "sqlite", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "sqlite-vec>=0.1.6",
    "numpy>=1.24",
    "click>=8.0",
    "python-ulid>=3.0.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.0"]
onnx = ["onnxruntime>=1.15"]
ui = ["aiohttp>=3.9"]
full = ["sentence-transformers>=2.0", "onnxruntime>=1.15", "aiohttp>=3.9"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "coverage>=7.0",
]

[project.scripts]
graph-mem = "graph_mem.cli.main:cli"

[project.urls]
Homepage = "https://github.com/Sathvik-1007/GraphMem-MCP"
Documentation = "https://github.com/Sathvik-1007/GraphMem-MCP#readme"
Repository = "https://github.com/Sathvik-1007/GraphMem-MCP"
Issues = "https://github.com/Sathvik-1007/GraphMem-MCP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_mem"]

[tool.hatch.build.targets.wheel.force-include]
"src/graph_mem/ui/frontend" = "graph_mem/ui/frontend"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["graph_mem"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
